# VPM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
apps/: CMakeLists.txt
apps/NavierStokes_2D/: CMakeLists.txt  plot_particles2d.py
apps/NavierStokes_2D/src/: App.cpp
apps/NavierStokes_2D_GeoRL/: CMakeLists.txt
apps/NavierStokes_2D_GeoRL/python/: plot_particles2d.py
apps/NavierStokes_2D_GeoRL/python_lib/: plot_particles2d.py
apps/NavierStokes_2D_GeoRL/src/: App.cpp  Init.cpp  WriteParams.cpp
apps/NavierStokes_3D/: CMakeLists.txt  plot_particles2d.py
apps/NavierStokes_3D/src/: App.cpp
cmake/: CMakeHeader.txt  CMakeInit_Linux.txt  CMakeInit_Windows.txt  FindEGL.cmake  FindGLEW.cmake  FindNvCaffe.cmake  FindNvInfer.cmake  FindPETSc.cmake
libs/: CMakeLists.txt
libs/DiffusionEquationSolver2D/: CMakeLists.txt
libs/DiffusionEquationSolver2D/include/: DiffusionEquationSolver2D.hpp
libs/DiffusionEquationSolver2D/src/: DiffusionEquationSolver2D.cpp
libs/DiffusionEquationSolver3D/: CMakeLists.txt
libs/DiffusionEquationSolver3D/include/: DiffusionEquationSolver3D.hpp
libs/DiffusionEquationSolver3D/src/: DiffusionEquationSolver3D.cpp
libs/FMM2D/: CMakeLists.txt
libs/GeneralUtils/: CMakeLists.txt  README.txt
libs/GeneralUtils/include/: AlmostEqual.hpp  BBox.hpp  ClampValue.hpp  FlattenArrayIndex.hpp  GetExponent.hpp  SelectGlewOrGLES.hpp  StringTools.hpp  TensorTransformations.hpp  Transformations.hpp
libs/NavierStokes_VPM_2D/: CMakeLists.txt
libs/NavierStokes_VPM_2D/include/: DisableOutput.hpp  InitialConditions.hpp  Kernels.hpp  Matrix2x2.hpp  Parameters.hpp  Particles2d.hpp  Point2d.hpp  Redistribute.hpp  Split_Advection.hpp  Split_Diffusion.hpp  Split_Source.hpp  Structure.hpp  Structure_Circle.hpp  Structure_Ellipse.hpp  Structure_Flat.hpp  Structure_HalfCircle.hpp  Structure_Hilly.hpp  Structure_InverseCircle.hpp  Structure_Rectangle.hpp  Structure_Transformed.hpp  Structure_Wing.hpp  UnionStructure.hpp  Utilities.hpp  VPM2d.hpp
libs/NavierStokes_VPM_2D/src/: InitialConditions.cpp  Redistribute.cpp  Split_Advection.cpp  Split_Diffusion.cpp  Split_Source.cpp  Structure_Circle.cpp  Structure_Ellipse.cpp  Structure_Flat.cpp  Structure_HalfCircle.cpp  Structure_Hilly.cpp  Structure_InverseCircle.cpp  Structure_Rectangle.cpp  Structure_Transformed.cpp  Structure_Wing.cpp  UnionStructure.cpp  VPM2d.cpp
libs/NavierStokes_VPM_3D/: CMakeLists.txt
libs/NavierStokes_VPM_3D/include/: InitialConditions.hpp  Parameters.hpp  Particles3d.hpp  Point3d.hpp  Redistribute.hpp  Split_Advection.hpp  Split_Diffusion.hpp  Split_Source.hpp  Structure.hpp  Structure_Bar.hpp  Structure_Flat.hpp  Structure_Hilly.hpp  Structure_Sphere.hpp  Utilities.hpp  VPM3d.hpp
libs/NavierStokes_VPM_3D/src/: InitialConditions.cpp  Redistribute.cpp  Split_Advection.cpp  Split_Diffusion.cpp  Split_Source.cpp  Structure_Bar.cpp  Structure_Flat.cpp  Structure_Hilly.cpp  Structure_Sphere.cpp  VPM3d.cpp
libs/PoissonSolver2D/: CMakeLists.txt
libs/PoissonSolver2D/include/: PoissonSolver2D.hpp
libs/PoissonSolver2D/src/: PoissonSolver2D.cpp
libs/PoissonSolver3D/: CMakeLists.txt
libs/PoissonSolver3D/include/: PoissonSolver3D.hpp
libs/PoissonSolver3D/src/: PoissonSolver3D.cpp
pyVPM/: CMakeLists.txt
pyVPM/src/: PyVPM.cpp
pyVPM/test/: test_point2d.py
